Deprecated URL constructor replaced to URI(url).toURL()